# automatization_devices_test_task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
logging/: do_it_yourself.py
logging_task/: do_it_yourself.py
testing/: test_name.py
